// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "mysql"
    url      = env("DATABASE_URL")
}

generator dbml {
  provider   = "prisma-dbml-generator"
  projectName = "Test Project Name"
  projectDatabaseType = "MySQL"
  projectNote = "Test project description"
}

model User {
    id Int @id @default(autoincrement())
    firstName String
    lastName String
    email String
    type ClientType @default(POTENTIAL)
    portfolio Portfolio[]
    preference Preference?
}

model Portfolio {
    id Int @id @default(autoincrement())
    assets String // json object of assets { "SPY": 10, "AAPL": 2 }
    user   User? @relation(fields: [userId], references: [id])
    userId Int
}

enum ClientType {
    POTENTIAL
    CONVERTED
}

model Preference {
    id String @id @default(cuid())
    spendingPeriod String?
    longTerm String?
    periodOfFirstWithdrawal String?
    stable String?
    customerReaction String?
    indestryPref Industry
    user User? @relation(fields: [userId], references: [id])
    userId Int @unique
}

enum Industry {
    Energy
    Materials
    Industrials
    Utilities
    Healthcare
    Financials
    ConsumerDiscretionary
    ConsumerStaples
    InformationTechnology
    CommunicationServices
    RealEstate
}