//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Test Project Name" {
  database_type: 'MySQL'
  Note: 'Test project description'
}

Table User {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  email String [not null]
  type ClientType [not null, default: 'POTENTIAL']
  portfolio Portfolio [not null]
  preference Preference
}

Table Portfolio {
  id Int [pk, increment]
  assets String [not null]
  user User
  userId Int [not null]
}

Table Preference {
  id String [pk]
  spendingPeriod String
  longTerm String
  periodOfFirstWithdrawal String
  stable String
  customerReaction String
  indestryPref Industry [not null]
  user User
  userId Int [unique, not null]
}

Enum ClientType {
  POTENTIAL
  CONVERTED
}

Enum Industry {
  Energy
  Materials
  Industrials
  Utilities
  Healthcare
  Financials
  ConsumerDiscretionary
  ConsumerStaples
  InformationTechnology
  CommunicationServices
  RealEstate
}

Ref: Portfolio.userId > User.id

Ref: Preference.userId - User.id